--- a/index.html
+++ b/index.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Gradient Background</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body id= "gradient">
-	<h1>background generator</h1>
-	<input class = "color1" type = "color" name="color1" value= "#00ff00">
-	<input class = "color2" type = "color" name="color2" value= "#ff0000">
-	<h2>Courrent CSS Background</h2>
-	<h3></h3>
-	<script type="text/javascript" src="bundle.js"></script>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Gradient Background</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+  <body id="gradient">
+    <h1>Rutgers</h1>
+    <h4>
+      <p>195 University Ave, Newark, NJ 07102</p>
+    </h4>
+    <h4 class="max-w-[1000px]">
+      Hello, I'm Sonjhalyns Augustin and I'm a computer science student studying
+      at Rutgers University.I am an excellent problem solver, and a fast learner
+      which I believe are essential for pursuing a career in computer science.I
+      have a strong desire to grow my career, and to continuously learn about
+      new tools, technologies, and languages.
+    </h4>
+    <h4></h4>
+    <h4></h4>
+    <p>
+      <button
+        class="border-2 px-8 py-3 my-2 flex hover:bg-[#27374D] hover:border-[#27374D] rounded-lg text-[#A1B4C4]"
+        onclick="location.href = 'Sonjhalyns_Augustin_Resume_PDF.pdf'"
+      >
+        resume
+      </button>
+    </p>
+  </body>
 </html>
