--- a/index.html
+++ b/index.html
@@ -7,17 +7,14 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body id="gradient">
-    <h1>Rutgers</h1>
+    <h1><a href="https://www.newark.rutgers.edu/" style="text-decoration: none;">Rutgers</a></h1>
     <h4>
       <p>195 University Ave, Newark, NJ 07102</p>
     </h4>
     <h4 class="max-w-[1000px]">
       Hello, I'm Sonjhalyns Augustin and I'm a computer science student studying
-      at Rutgers University.I am an excellent problem solver, and a fast learner
-      which I believe are essential for pursuing a career in computer science.I
-      have a strong desire to grow my career, and to continuously learn about
-      new tools, technologies, and languages.
-    </h4>
+      at Rutgers University.Currently, I am enrolled in the summer 2023 session, focusing on two captivating courses: software engineering and intensive programming.I am an excellent problem solver, and a fast learner
+      which I believe are essential for pursuing a career in computer science.
     <h4></h4>
     <h4></h4>
     <p>
